tooling/nargo_cli/tests/snapshots/execution_success/regression_7962/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(v0: u64) -> pub u64 {
    let v1: u64 = v0 - 1;
    v1 & 1
}
