tooling/nargo_cli/tests/snapshots/execution_success/regression_7962/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u64):
    (no terminator instruction)
}
[regression_7962] Circuit output: 0
